<resources>
    <string name="app_name">المخدرات</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_page2"> </string>
    <string name="title_activity_page3"></string>
    <string name="title_activity_page4"> </string>
    <string name="title_activity_page5"></string>
    <string name="title_activity_page6"></string>
    <string name="title_activity_page7"> </string>
    <string name="title_activity_page8"></string>
    <string name="title_activity_page9"></string>
    <string name="title_activity_page10"></string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="page1">

        <b>تعريف المُخدّرات</b>
        \n
        \n


 هي مواد نباتِية طبيعية أو مُصنّعة تحتوي على
          \n
 الكثير من الموادالمُهدّئة والمُسّكِنة للأعصاب البّشرية
                  \n


 والتي تُسبِب الإدمان عليها والخُمول الذّهنِي والجسدِي
                  \n

 وفي أغلب حالات استعمالِها نتيجة الفُضول أو الشُعور
                  \n

 بالمُتّعة وبالتالي تُؤدي المُخدّرات إلى إصابة الجِهاز
                  \n

 الدّوري بأمراض خطيرة وإلى شلَل في الجِهاز التنّفُسي
                  \n


والعصّبي كما ويحتوي المُخدّر على مواد مُنشّطة تُسبب
                  \n

 خلل في عمليات العقل إذا استُخدِمت في غير الأغراضْ
                 \n


  الطّبية ما يضُر أيضاً بالصّحة الجسديّة والنّفسيّة والاجتماعيّة للشخْص المُتعاطِي
                \n

        \n
          \n


<b>• تعريف المُخدّرات لغوياً:</b>
        جاءت من لفظْ خدّر والذي مصدرُه تخدِير
        \n

        ويُقال إنّ المُخدّر فيه فُتور وكَسَل
           \n

        تُعطّل الجِسم عنْ أداء الكثير من وظائِفُه وتُعطّل شعوره وإحساسه
          \n
\n

 <b>•تعريف المُخدّرات شرعياً:</b>
        أُُطلِق على المُخدّرات في الشّرع بالمُفترات
        \n
        ما يعني أنّها تُغيّب العقل والحواس
          \n
        أما إذا صَحب ذلك نشوة وسُرور فإنّهُ مُسكِر وليس مُخدّر
          \n

\n
 <b>•تعريف المُخدّر قانونياً:</b>
        المُخدّر عبارة عن مجموعة منْ المواد التي تُسبب لمُتناولها الإدمان
          \n

        أيْ أنّ جسمُه ونفسيتُه تعتمِد على هذا الدّواء
                \n


        ما يُسبب تسّمُم في الجِهاز العصَبِي المَركزِي
                \n


        المُخدّر يُحظر قانونياً زراعتُه أو تصنيعُه
                 \n


        إلا لبعض الأغراض الضّرورية التي يُحددُها القانون
                  \n

        ولا يستطيع أيْ إنسان أنْ يستخدمها دون أنْ يكون مُرخّصْ له من الجِهات المُختّصَة


 </string>
    <string name="n2">


        <b>أنواع المخدرات</b>
\n
        \n

 تقسم المخدرات إلى العديد من الأنواع:
\n
\n

  فمنها ما هو ممنوع دولياً،وتعتبر تجارته
 جريمة يحاسب عليها القانون وينزل بتجارها
 أقسى العقوبات كالمخدرات التي تصنعً
  طبيعيا من الأعشاب التي تمنح المتعاطي شعوراً
  بالنشوة والفرح في ظل غياب العقل والمنطق
   حيث يدخل في استخدامات عدة على رأسها  ،ومنها
    ما هو مقبول الصناعات الدوائية المسكنة
  والمهدئة وعلاجات العديد من الأمراض،
        الصناعات
                \n
\n

      <b>  ويندرج تحت قائمة المخدرات كل من:</b>
                        \n
                \n

  • المخدرات المهدئة والمهبطة أو المثبطات
                        \n


           •المخدرات المنشطة أو المنبهات والمهلوسات التي تذهب
          \n
        بالمتعاطي إلى الخيال وتفصله بشكل تام ومؤقت عن الواقع
  \n
        • المنشطات والمثيرات الجنسية
        \n
  • وللحديث بشكل أكثر تفصيلاً عن أبرز أنواع المخدرات
        \n
        نذكر ما يلي:
        \n
        \n
 <b>• الهيروين أو الكوكيين،</b>
        \n
        وتعود تسميته إلى مصدر استخلاصه

   حيث يستخلص هذا النوع من المخدرات من نبات الكوكا
  ويأتي على شكل بودرة بيضاء عادةً ما يتم تعاطيها واستنشاقها عبر الأنف
  ويعتبر هذا النوع من أشهر أنواع المخدرات
   وهو عبارة عن مادة منشطة تسبب الشعور بالسعادة واليقظة والنشوة
  وكلما تعاطاها المدمن زاد لديه الشعور بالحاجة إلى المزيد
   وتصل فترة تأثيرها إلى ما يقارب العشرين دقيقة
        \n
        \n
        <b>• حبوب السعادة</b>
        \n
 المحظورة قانونياً ويطلق عليها اسم إكستاسي،

        ينتشر هذا النوع من المخدرات في أيرلندا،
        ويتم تصنيعه كيميائياً في مصانع سرية وغير مرخصة،
        ويؤثر على المتعاطي بشكل كبير في زيادة نسبة السعادة
        لديه وزيادة شعوره بالحبّ اتجاه الآخرين في محيطه،
        إلى أنه ينتهي به في نهاية المطاف
        إلى الانهيار عصبياً.
        \n
        \n
 <b>• القنب </b>
        \n
        ويمثل أشهر أنواع المخدرات التي يتم تصنيعها طبيعياً من نباتيطلق عليه هذا الاسم،
        ويتم تعاطيه بعدة طرق إما على شكل صمغ،
        أو كتل قنبية صلبة أو من خلال أوراق النبات نفسه،
        حيث يسبب هذا النوع من المخدرات إلى الشعور بالاسترخاء الكبير والراحة والفرح والتلذذ بالألوان
        والكلمات والأصوات والاستمتاع المؤقت بالأشياء
        ويعتبر من أشهر أنواع الإدمان بعد الإدمان على الكحول.
  \n
        \n


    </string>
    <string name="f">
        \n
        \n
        \n
        \n
    </string>
    <string name="n3">






 <b>طرق تعاطي المخدرات</b>
\n
        \n
 تتعدد طرق وأشكال تعاطي المخدرات،
        منها ما يتم أخذه عن طريق الحقن
        ومنها ما يتم استنشاقه عبر الأنف
        ومنها ما يتم تعاطيه عبر لاصقات مخصصة للتعاطي
        أو من خلال تدخين سجائر الحشيش وغيرها


    </string>
    <string name="n4"><b>أنواع المُخدّرات حسب مصدرها: </b>
        \n

\n
• طبيعيّة: مثل الأفيون والذي يُسميه البعض بالخُشخَاش، القات.
        \n
• كيميائية: الهِيروين، المُورفِين.
        \n
• صِناعيّة: بعض عقاقِير الهَلوسَة والمُسكّنات والمُهدّئات.

\n
        \n
 <b> أنواع المُخدّرات من حيثُ أثرها على جِسم الإنسان:</b>
\n
        \n

 المواد المُنشّطَة:
\n
        \n

• تعمل هذه المواد المُنشّطة على زيادة توسّع حدّقة العين
        \n
• كما تُسبِب اضطرابات في النّوم
        \n
• ترفَع منْ مُعدّل النّشاط العصبِي، ما يجعل الشّخص يشعُر بأنّه نشيط ومُتيقِظْ
        \n
• تجعل الشّخص لا شُعورياً يُكثرُ من الكلام
        \n
• تُقلِل شهيّة المُتعاطِي أثناء تناوله للطّعام
        \n
• تزيد في ضغِط الدّم وسُرعة دّقات القلب والتّنفُس، كما وترفع منْ مُعدّل حرارة الجِسِم
        \n
• يُستخدم المروجون للمُخدّرات نُقطّة ضعف المُتعاطِي وهي ارتفاع ثِقتُه بنفسِه وشُعوره بأنّه
                                                        أصبح مقبول اجتماعيا
        \n

\n


<b>أنواعها:  </b>
        \n
\n

• الكوكايين
        \n
• الكراك
        \n

        • النيكُوتين الموجود في السّجائر
        \n
• الكاتينون في القَات
        \n
• الكافيين في القهوة والمشروبات الغازيّة
        \n
• الاكستاسي ويُعرف بقُرص الحب
        \n
• الامفيتامينات


</string>
    <string name="n5">



 المواد المُثّبِطة أو المُسكّنة
\n
        \n
• تُسبِب قِلة التّركيز والتّشويش الدّماغِي
        \n
• تُفقِد المُتعاطِي الإحساس
                \n

• تُسبب سوء في تقدير الأمور والحُكم عليها
                \n

• تُبطِئ النّشاط العصبِي لجهاز العصَب المركزي
                \n

• تُبطِئ منْ مُعدّل التّنفُس وضربات القلب ما يُؤدي إلى الموت
                \n

• تُسبّب مشاكل في الذّاكرة وربما تصِل إلى فقدِها
                \n

• تُؤدي إلى بُطء في الحركة وغَثيان وقد تصل إلى الغيبوبة
        وإنْ أخذ الإنسان جُرعَة زائدة منها فإنّه قد يموت
                \n

• تُسبِب القلق والحِيرة
                \n

• الفرح الزّائد دون أيْ سبب
                \n

• تُسبب مشاكل في ردّات الفِعل على الأحداث وعدم التّناسُق الحَركِي
                \n

• تُسكّن الألم وتؤدي إلى النّوم
        \n
        \n

<b>أنواعِها:</b>
\n
        \n
• الكُحول: وتكون على شكلْ نَبيذ، ويسكي، بيرة، فوتكا
        \n

• الأفيونات: ومنه الهِيروين، المُورفين
        \n

• القنبيات: وما يُعرف بالحشيش وعُشبة هاش، بانغو
        \n

• المواد المُتطايرة التي يستنشقُها الإنسان، الغِراء، مُخفِف الطّلاء،
        أنواع الوقود، بعض مواد التّنظيف
        \n

• الأدويّة التي تُستخدم في المجال الطّبي لتخفيف الآلام والتّشنُجات، مثل: مواد التّخدِير والمُسكّنات

\n
\n

<b>المواد المُهلْوسة</b>
\n
        \n
 هذه المواد ولو استُخدِمت بكميات قليلة فإنّها قد تُؤدي لكل هذاالمَضَار:
        \n
        \n
• تُؤثر على إدراك الإنسان وفهمِه الصّحيح للأشياء
        والأمور الحقيقية، وبالتّالي تعمل المُخدّرات على تشويشَها
        فيتراءى للمُتعاطِي أنْ يرى ويسمع عنْ أشياء
        هي ليست موجودة حقيقة
        وهذا ما نُسميه بالهَلوسَة البّصرية والسّمعية
        ومثال على ذلك يعتقِد المُتعاطِي أنّ باستطاعتُه الطّيران
        لأنّه يشعُر بفُقدان حُدود جسمه
        \n
        \n
• قد يفقِد الاتصال بالواقع
        ويقوم بتصرُفات خطيرة للغايّة
        ما يُمكنُه منْ أنْ يُؤذي نفسُه أو الآخرين
        \n
        \n
• الاختلاف في ردّات فعل المُتعاطِي، وخاصّة
        في مشاعر الخوف والفَرح.
        \n
        \n
• تُسّبب تشّنُجات في المعِدة والدّماغ،
        تعرّق، فُقدان للشّهيّة، الغثَيان، توسُع حدَقة العين و عدم القُدرة على النّوم.
\n
        \n
<b>أنواعها:</b>
\n
        \n
• مخدر LSD ويُسمى القنب، يكون في الحشيش بتركيز أكبَر ويكون اعتبارُه منْ المواد المُثبّطة أو المُهلوسَة.
        \n
        \n
• مخدّر الاكستاسي يُصبح من المُخدّرات ذات المواد المُهلوسة، إذا تمّ تعاطِيه بكميات كبيرة.



    </string>
    <string name="about">


















اللجنة الوطنية  للتوعية من اضرار المخدرات في العراق
        لجنة تابعه الى منظمة الحقوقين للدفاع عن حقوق الانسان
        وهي منظمة مستقلة غير حكومية غير ربحية وغير سياسية
        وغير طائفية ولا مذهبية و لا عنصرية تأسست عام 2008
        وسجلت في دائرة المنظمات غير الحكومية بالرقم (1H72886)
        , تعمل في اطار القانون العراقي لتحقيق الاهداف التي وجدت من اجلها.
وتأمل منظمتنا العمل  المشترك و التعاون سوية بموجب الاتفاقات التي ابرمت
        بين طرفينا على التوعية من افة العصر الحديث ( المخدرات )
        و المؤثرات العقلية من خلال التوعية من مخاطره
        و اثاره السلبيه  لتعزيز القيم الإيجابية  .





    </string>
    <string name="nabaa">

        \n
نبأ ناهض حمزة</string>
    <string name="osama">

        \n
اسامة اسماعيل عواد</string>
    <string name="mohammed">

        \n
محمد عيسى حميد</string>
    <string name="first">

        \n
                رئيس منظمة الحقوقيين للدفاع عن حقوق الانسان

    </string>
    <string name="sec">



        \n
                رئيس اللجنة الوطنية للتوعية ضد اضرار المخدرات في العراق

    </string>
</resources>