<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".about1"
        android:layoutDirection="rtl"
        android:background="#eeeeee"
        tools:showIn="@layout/app_bar_about1"
        android:padding="12dp"
        >


        <ImageView
            android:layout_width="408dp"
            android:layout_height="186dp"
            android:layout_marginTop="82dp"
            android:adjustViewBounds="true"
            android:maxHeight="30dp"
            android:layout_gravity="center"
            android:foregroundGravity="center_horizontal"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:src="@drawable/log1"
          />
       <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp">
          <com.example.nabaa96.myapplicationnm.mytv
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="gravity"
                android:text="@string/about" />

        </android.support.constraint.ConstraintLayout>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="10dp"

            app:contentPaddingBottom="15dp"
            app:contentPaddingLeft="25dp"
            app:contentPaddingRight="15dp"
            app:contentPaddingTop="15dp"




            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
               android:text="مصطفى عبدالخالق الطائي"
                android:layout_marginRight="80dp"

                android:textSize="15dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/sec"


                android:textSize="15dp" />
        </android.support.v7.widget.CardView>




        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="10dp"

            app:contentPaddingBottom="15dp"
            app:contentPaddingLeft="25dp"
            app:contentPaddingRight="15dp"
            app:contentPaddingTop="15dp"




            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:text="منتظر عبدالظاهر محمد"
                android:layout_marginRight="80dp"

                android:textSize="15dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/first"


                android:textSize="15dp" />
        </android.support.v7.widget.CardView>















        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="32dp"
            android:adjustViewBounds="true"
            android:foregroundGravity="center_horizontal"
            android:maxHeight="30dp"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:src="@drawable/pic100" />

    </LinearLayout>


</ScrollView>