<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".aboutapp"
    tools:showIn="@layout/app_bar_aboutapp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl">



    <View
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="1dp"

        android:background="@drawable/bgg">

    </View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        android:padding="10dp"
        android:paddingBottom="0dp">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            app:cardCornerRadius="10dp"

            app:contentPaddingBottom="15dp"
            app:contentPaddingLeft="25dp"
            app:contentPaddingRight="140dp"
            app:contentPaddingTop="15dp"




            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:text="المبرمجة"
android:layout_marginRight="20dp"

                android:textSize="15dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/nabaa"


                android:textSize="15dp" />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            app:cardCornerRadius="10dp"

            app:contentPaddingBottom="15dp"
            app:contentPaddingLeft="25dp"
            app:contentPaddingRight="130dp"
            app:contentPaddingTop="15dp"


            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:text="مدير المشروع"
                android:layout_marginRight="20dp"

                android:textSize="15dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/osama"


                android:textSize="15dp" />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="320dp"
            app:cardCornerRadius="10dp"

            app:contentPaddingBottom="15dp"
            app:contentPaddingLeft="25dp"
            app:contentPaddingRight="120dp"
            app:contentPaddingTop="15dp"


            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:text="مؤسس المبادرة"
                android:layout_marginRight="20dp"

                android:textSize="15dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:text="@string/mohammed"
                android:layout_marginRight="10dp"

                android:textSize="15dp" />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="430dp"
            app:cardCornerRadius="10dp"

            app:contentPaddingBottom="15dp"
            app:contentPaddingLeft="25dp"
            app:contentPaddingRight="130dp"
            app:contentPaddingTop="15dp"


            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:text=""
                android:layout_marginRight="20dp"

                android:textSize="15dp" />

        </android.support.v7.widget.CardView>
</RelativeLayout>
    </RelativeLayout>
</ScrollView>